@@ -3,6 +3,7 @@ package rendering;
 import static org.lwjgl.opengl.GL33.*;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.FloatBuffer;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -27,7 +28,10 @@ public class Shader {
 		this.filepath = filepath;
 		
 		try {
-			String source = new String(Files.readAllBytes(Paths.get(filepath)));
+			InputStream is = getClass().getResourceAsStream(filepath);
+			byte[] bytes = is.readAllBytes();
+			
+			String source = new String(bytes);
 			String[] splitString = source.split("(#type)( )+([a-zA-Z]+)");
 			
 			int index = source.indexOf("#type") + 6;
